--- a/protractor/protractor.csproj
+++ b/protractor/protractor.csproj
@@ -37,17 +37,17 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\KSP .18\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\ksp-win-0-19-1 TESTING\KSP_win\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\KSP .18\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\ksp-win-0-19-1 TESTING\KSP_win\KSP_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "C:\Users\chris\Downloads\KSP .18.2\Plugins"
+    <PostBuildEvent>copy "$(TargetPath)" "C:\Users\chris\Downloads\ksp-win-0-19-1 TESTING\KSP_win\Plugins"
 copy "$(TargetPath)" "M:\users\chris\Documents\Dropbox\Chris Documents\KSP\protractor\new version\Plugins"
 copy "$(ProjectDir)protractor - partmodule.cs" "M:\users\chris\Documents\Dropbox\Chris Documents\KSP\protractor\new version\Plugins"
 copy "$(ProjectDir)Utils.cs" "M:\users\chris\Documents\Dropbox\Chris Documents\KSP\protractor\new version\Plugins"</PostBuildEvent>
