--- a/protractor/protractor.csproj
+++ b/protractor/protractor.csproj
@@ -37,18 +37,18 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\ksp-win-0-20-0\KSP_win\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>M:\Steam\steamapps\common\Kerbal Space Program\KSP_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\ksp-win-0-20-0\KSP_win\KSP_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>M:\Steam\steamapps\common\Kerbal Space Program\KSP_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "C:\Users\chris\Downloads\ksp-win-0-20-0\KSP_win\GameData\Protractor\Plugins"
-copy "$(TargetPath)" "M:\users\chris\Documents\Dropbox\Chris Documents\KSP\protractor\newest version\Protractor\Plugins"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "M:\Steam\steamapps\common\Kerbal Space Program\GameData\Protractor\Plugins"
+copy "$(TargetPath)" "M:\users\chris\Documents\Dropbox\Chris Documents\KSP\protractor\newest version\Plugins"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
